# softway_test

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml
docker/entrypoints/: migrate.sh  web.sh  worker.sh
migrations/: env.py
migrations/versions/: 9cd2a0b989b6_init.py
src/task_service/: main.py
src/task_service/adapters/: __init__.py  config.py  worker.py
src/task_service/adapters/db/: __init__.py  registry.py  repositories.py  session.py
src/task_service/adapters/db/mappers/: __init__.py
src/task_service/adapters/db/tables/: __init__.py  tasks.py
src/task_service/adapters/queue/: __init__.py  taskiq_queue.py
src/task_service/app/: __init__.py  errors.py  use_cases.py
src/task_service/domain/: __init__.py  entities.py  services.py
src/task_service/ports/: __init__.py  queues.py  repositories.py  transactions.py
src/task_service/presentation/: __init__.py  api.py  schemas.py
src/task_service/presentation/api/: __init__.py  handlers.py
src/task_service/presentation/taskiq/: __init__.py  broker.py  tasks.py  worker_broker.py
src/task_service/setup/: __init__.py  container.py  providers.py
tests/: test_tasks.py
